# pyscannerbit

./: .gitmodules  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  grab_ScannerBit.sh  grab_mods.sh  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/examples/: test.rst
docs/source/usage/: quick_start.rst
pyscannerbit/: __init__.py  defaults.py  ext_module.py  hdf5_help.py  plottools.py  processify.py  scan.py  utils.py
pyscannerbit/scannerbit/: ScannerBit-1.1.3.tar  ScannerBit_stripped.tar
src/: pyScannerBit.cpp
tests/: basic_test.py  interface_test.py  test_all_scanners.py  test_all_scanners_ext.py  test_ext.py
